fix: dropdown hover gap, pricing no prices, careers form+box+email, AR toggle all pages, Playfair logo in ar.html, hash redirect, schema complete

--- a/ar.html
+++ b/ar.html
@@ -18,7 +18,7 @@
 <meta property="og:image:height" content="630">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=DM+Sans:wght@400;500;600&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
 <style>
 /* ── RESET & BASE ── */
 *{box-sizing:border-box;margin:0;padding:0}
@@ -51,7 +51,7 @@ img{max-width:100%;display:block}
 .nav-in{display:flex;align-items:center;justify-content:space-between;height:68px}
 .nav-brand{display:flex;align-items:center;gap:10px}
 .nav-brand img{height:42px}
-.brand-name{font-family:var(--fh);font-size:22px;font-weight:800;color:#fff}
+.brand-name{font-family:'Playfair Display',serif;font-size:22px;font-weight:800;color:#fff}
 .brand-name em{color:var(--gold);font-style:normal}
 .nav-links{display:flex;align-items:center;gap:4px;list-style:none}
 .nav-links a{padding:7px 12px;font-size:13.5px;color:rgba(255,255,255,.65);border-radius:6px;transition:all var(--t);font-weight:500}
@@ -187,6 +187,7 @@ img{max-width:100%;display:block}
   .cta-t{font-size:28px}
   .stats-grid{grid-template-columns:1fr 1fr}
 }
+.nav-brand .brand-name,.footer-brand span{font-family:'Playfair Display',serif!important}
 </style>
 <script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://staffona.com/ar#page","name":"استشارات موارد بشرية في مصر | ستافونا","description":"ستافونا — شريكك المتخصص في إدارة الموارد البشرية والرواتب والتوظيف في مصر.","url":"https://staffona.com/ar","inLanguage":"ar","publisher":{"@type":"Organization","name":"Staffona","url":"https://staffona.com"}},{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"الرئيسية","item":"https://staffona.com/ar"}]}]}</script>
 </head>
