--- a/pricing.html
+++ b/pricing.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Pricing — HR Outsourcing & Payroll Egypt | Staffona</title>
-<meta name="description" content="Transparent pricing for HR outsourcing, payroll management, and recruitment in Egypt. No hidden fees. Get a custom quote within one business day.">
+<title>Services & Pricing — HR Outsourcing Egypt | Staffona</title>
+<meta name="description" content="HR outsourcing, payroll, and recruitment services in Egypt. Get a custom quote tailored to your team size and needs within one business day.">
 <link rel="canonical" href="https://staffona.com/pricing">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://staffona.com/pricing">
-<meta property="og:title" content="Pricing — HR Outsourcing & Payroll Egypt | Staffona">
+<meta property="og:title" content="Services & Pricing — HR Outsourcing Egypt | Staffona">
 <meta property="og:description" content="Transparent pricing for HR outsourcing, payroll, and recruitment in Egypt. Custom quotes within one business day.">
 <meta property="og:image" content="https://staffona.com/og-banner.png">
 <meta property="og:image:width" content="1200">
@@ -114,6 +114,7 @@
     </ul>
     <div class="nav-r">
       <a href="mailto:info@staffona.com" class="nav-email">info@staffona.com</a>
+            <a href="ar.html" class="lang-btn" title="Arabic / العربية">🌐 AR</a>
       <button class="dm-btn" aria-label="Toggle dark mode"><svg class="dm-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg><svg class="dm-sun" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/></svg></button>
       <button class="btn btn-gold btn-sm" data-cal>Book Consultation</button>
       <button class="hbg" id="hbg" aria-label="Menu" aria-expanded="false" style="display:none"><span></span><span></span><span></span></button>
@@ -134,8 +135,8 @@
   <div class="w ph-in">
     <div class="breadcrumb"><a href="index.html">Home</a><span class="bc-sep">›</span><span>Pricing</span></div>
     <div class="ph-pill">Transparent Pricing</div>
-    <h1>Simple, Honest Pricing<br>for <span>Egypt HR Services</span></h1>
-    <p class="sub">No hidden fees. No long-term lock-in. Get a custom quote within one business day — the first consultation is always free.</p>
+    <h1>Services &amp; Pricing<br>for <span>Egypt HR</span></h1>
+    <p class="sub">Every engagement is different. Tell us your team size and needs — we'll send a tailored quote within one business day. First consultation is always free.</p>
   </div>
 </section>
 
@@ -152,9 +153,9 @@
         <div class="pc-name">Payroll Management</div>
         <p class="pc-tagline">For companies with an existing Egyptian entity that need payroll handled.</p>
         <div class="pc-price">
-          <div class="pc-from">Starting from</div>
-          <div class="pc-amount">$120</div>
-          <div class="pc-unit">per employee / month</div>
+          <div class="pc-from">Pricing</div>
+          <div style="font-size:15px;font-weight:700;color:var(--sl);margin:6px 0 4px">Custom Quote</div>
+          <div class="pc-unit">Based on team size &amp; requirements</div>
         </div>
         <ul class="pc-features">
           <li><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg>Monthly salary calculation</li>
@@ -175,9 +176,9 @@
         <div class="pc-name">Managed Employment (EOR)</div>
         <p class="pc-tagline">Full employer of record — hire in Egypt without a local entity.</p>
         <div class="pc-price">
-          <div class="pc-from">Starting from</div>
-          <div class="pc-amount">$250</div>
-          <div class="pc-unit">per employee / month</div>
+          <div class="pc-from">Pricing</div>
+          <div style="font-size:15px;font-weight:700;color:var(--sl);margin:6px 0 4px">Custom Quote</div>
+          <div class="pc-unit">Based on team size &amp; requirements</div>
         </div>
         <ul class="pc-features">
           <li><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg>Everything in Payroll Management</li>
@@ -197,9 +198,9 @@
         <div class="pc-name">Recruitment</div>
         <p class="pc-tagline">Find and place vetted Egyptian talent for any role.</p>
         <div class="pc-price">
-          <div class="pc-from">One-time fee</div>
-          <div class="pc-amount">15–20%</div>
-          <div class="pc-unit">of placed candidate's annual salary</div>
+          <div class="pc-from">Pricing</div>
+          <div style="font-size:15px;font-weight:700;color:var(--sl);margin:6px 0 4px">Custom Quote</div>
+          <div class="pc-unit">Based on team size &amp; requirements</div>
         </div>
         <ul class="pc-features">
           <li><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg>Role scoping &amp; job description</li>
@@ -219,7 +220,7 @@
     <div style="margin-top:40px;display:grid;grid-template-columns:1fr 1fr 1fr;gap:16px">
       <div class="guarantee-strip" style="margin-bottom:0">
         <div class="g-icon">🔓</div>
-        <div><div class="g-title">No lock-in</div><div class="g-desc">Exit managed employment or payroll with 30 days' notice. No penalties.</div></div>
+        <div><div class="g-title">No minimum term</div><div class="g-desc">Exit managed employment or payroll with 30 days' notice. No penalties.</div></div>
       </div>
       <div class="guarantee-strip" style="margin-bottom:0">
         <div class="g-icon">💬</div>
@@ -240,22 +241,22 @@
         </div>
         <div class="addon-row">
           <div class="addon-name">Employee onboarding (first employee)</div>
-          <div class="addon-price">$200</div>
+          <div class="addon-price">On request</div>
           <div class="addon-desc">One-time. Waived for teams of 3+</div>
         </div>
         <div class="addon-row">
           <div class="addon-name">HR compliance audit</div>
-          <div class="addon-price">$350</div>
+          <div class="addon-price">On request</div>
           <div class="addon-desc">Review existing employment contracts and filings</div>
         </div>
         <div class="addon-row">
           <div class="addon-name">Employee termination management</div>
-          <div class="addon-price">$150</div>
+          <div class="addon-price">On request</div>
           <div class="addon-desc">Legal notice, NOSI exit, tax clearance</div>
         </div>
         <div class="addon-row">
           <div class="addon-name">Employment contract drafting</div>
-          <div class="addon-price">$120</div>
+          <div class="addon-price">On request</div>
           <div class="addon-desc">Bilingual Arabic/English, Labor Law 12/2003 compliant</div>
         </div>
         <div class="addon-row">
@@ -265,7 +266,7 @@
         </div>
         <div class="addon-row">
           <div class="addon-name">Background check (per candidate)</div>
-          <div class="addon-price">$80</div>
+          <div class="addon-price">On request</div>
           <div class="addon-desc">Employment history, criminal record, references</div>
         </div>
       </div>
@@ -349,10 +350,10 @@
   <div class="w">
     <div class="sh sh-c rv"><div class="lbl lbl-c">FAQ</div><h2 class="h2 h2-c">Pricing Questions <span>Answered</span></h2></div>
     <div style="max-width:720px;margin:40px auto 0">
-      <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">How does Staffona's pricing work?</span></div><div class="faq-a"><p>Payroll management and managed employment are charged as a monthly fee per employee. Recruitment is a one-time placement fee as a percentage of the hired candidate's annual salary. All pricing is transparent — no monthly surprises.</p></div></div>
+      <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">How does Staffona's pricing work?</span></div><div class="faq-a"><p>After a short consultation call, we send a custom written proposal within one business day. Pricing depends on your team size, contract structure, and required services. There are no hidden fees — everything is agreed in writing before any engagement starts.</p></div></div>
       <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">Are prices in USD? Can I pay in other currencies?</span></div><div class="faq-a"><p>Pricing is quoted in USD for international clients. We also invoice in AED, GBP, and EUR. Egyptian clients can be invoiced in EGP at current exchange rates.</p></div></div>
       <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">Is there a minimum contract length?</span></div><div class="faq-a"><p>No. Payroll management and managed employment services have no minimum contract term. You can exit with 30 days' notice at any time with no penalties.</p></div></div>
-      <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">Are there setup or onboarding fees?</span></div><div class="faq-a"><p>There is a one-time onboarding fee of $200 for the first employee, which covers contract preparation, Labor Office registration, and NOSI enrollment. This fee is waived for clients starting with 3 or more employees.</p></div></div>
+      <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">Are there setup or onboarding fees?</span></div><div class="faq-a"><p>There is a small one-time onboarding fee for the first employee, which covers contract preparation, Labor Office registration, and NOSI enrollment. This fee is waived for clients starting with 3 or more employees — details confirmed in your custom quote.</p></div></div>
       <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">What's included in the managed employment fee?</span></div><div class="faq-a"><p>The monthly per-employee fee covers: employment contract, Labor Office registration, NOSI enrollment and monthly contributions, income tax withholding and filing, quarterly Form 4 returns, digital payslips, and a dedicated specialist. Employee salary is billed separately at actual cost.</p></div></div>
       <div class="faq-item"><div class="faq-q" onclick="faqT(this)"><span class="faq-ic">+</span><span class="faq-qt">Can I combine services?</span></div><div class="faq-a"><p>Yes — most clients combine services. For example, managed employment plus active recruitment to grow the team, or payroll management plus compliance advisory. Combined packages are quoted together and can reduce the per-service cost.</p></div></div>
     </div>
